# HIGH-FREQUENCY-TRADING-HFT-SIMULATION

./: CMakeLists.txt  MarketMaker.cfg  MockClient.cfg  README.md
src/: MarketDataProcessor.cpp  MarketDataProcessor.h  MarketMakerApp.cpp  MarketMakerApp.h  MockMarketDataSource.cpp  MockMarketDataSource.h  MockTradeClient.cpp  MockTradeClient.h  OrderBook.cpp  OrderBook.h  StrategyEngine.cpp  StrategyEngine.h  main_market_maker.cpp  main_mock_client.cpp
